--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,26 @@
-[project]
-name = "goit-pythonweb-hw-08"
+[tool.poetry]
+name = "goit-pythonweb-hw-10"
 version = "0.1.0"
 description = "homework"
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "fastapi[standard] (>=0.115.12,<0.116.0)",
-    "sqlalchemy (>=2.0.41,<3.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)",
-    "alembic (>=1.16.1,<2.0.0)"
-]
+license = "MIT"
+
+
+[tool.poetry.dependencies]
+python = "^3.12"
+fastapi = "^0.115.0"
+sqlalchemy = "^2.0.41"
+psycopg2-binary = "^2.9.10"
+asyncpg = "^0.30.0"
+alembic = "^1.16.1"
+uvicorn = "^0.25.0"
+pydantic = {extras = ["email"], version = "^2.0"}
+pydantic-settings = "^2.9.1"
+python-jose = {extras = ["cryptography"], version = "^3.5.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+libgravatar = "^1.0.4"
+python-multipart = "^0.0.20"
 
 
 [build-system]
