--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,15 @@ DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOS
 JWT_SECRET=YOUR_SECRET_KEY
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_SECONDS=3600
+
+
+POSTGRES_DB=hw10
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=567234
+POSTGRES_PORT=5432
+POSTGRES_HOST=postgres_db
+
+DB_URL=postgresql+asyncpg://postgres:567234@postgres_db:5432/hw10
+JWT_SECRET=your_secret_key
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_SECONDS=3600
