--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,13 +9,18 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - .:/src
     restart: always
 
   app:
-    build:
-      context: .
+    build: .
     container_name: app
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_HOST: ${POSTGRES_HOST}
     ports:
       - '3000:3000'
     depends_on:
