--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 libgravatar = "^1.0.4"
 python-multipart = "^0.0.20"
+logging = "^0.4.9.6"
 
 
 [build-system]
